tests/e2e/testdata/invalid/01_invalid_policy/policy-without-validations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deployment-validator
spec:
  failurePolicy: Fail
